Version 0.1 - 2016-04-??
* interprete '~' in most path settings

Version 0.0.1 - 2015-08-23
* initial release