@@ -1,5 +1,6 @@
 Version 0.1 - 2016-04-??
 * interprete '~' in most path settings
+* add 'create_target_if_missing' option
 
 Version 0.0.1 - 2015-08-23
 * initial release
